# bahamut

./: .gitignore  README.md  pom.xml
.github/: dependabot.yml
.github/workflows/: build.yml
contrib/: generate_fixture.py
proto/: aleph.proto  data.proto  db.proto  session.proto  view.proto  writer.proto
python/: .gitignore  Makefile  iterate_all.py  pyproject.toml  test.py  zavod_sync.py
python/zahirclient/: client.py  util.py  view.py
src/main/java/org/opensanctions/zahir/: App.java  Config.java
src/main/java/org/opensanctions/zahir/db/: CoreUtil.java  Key.java  RocksDBBackend.java  StatementValue.java  Store.java  StoreLock.java  StoreView.java  StoreWriter.java
src/main/java/org/opensanctions/zahir/ftm/: Entity.java  Model.java  ModelHelper.java  Property.java  PropertyType.java  Schema.java  Statement.java  StatementHelper.java  StatementLoader.java
src/main/java/org/opensanctions/zahir/ftm/entity/: Entity.java  EntityHelper.java  StatementEntity.java  ValueEntity.java
src/main/java/org/opensanctions/zahir/ftm/exceptions/: SchemaException.java
src/main/java/org/opensanctions/zahir/ftm/meta/: Catalog.java  Dataset.java  Version.java
src/main/java/org/opensanctions/zahir/ftm/model/: Edge.java  Model.java  ModelHelper.java  Property.java  PropertyType.java  Schema.java  TemporalExtent.java
src/main/java/org/opensanctions/zahir/ftm/resolver/: Identifier.java  Linker.java
src/main/java/org/opensanctions/zahir/ftm/statement/: Statement.java
src/main/java/org/opensanctions/zahir/ftm/store/: MemoryStore.java  (+1 more)
src/main/java/org/opensanctions/zahir/resolver/: Identifier.java  Linker.java
src/main/java/org/opensanctions/zahir/server/: Session.java  SessionServiceImpl.java  ViewServiceImpl.java  ViewSession.java  WriterServiceImpl.java  ZahirManager.java  ZahirServer.java
src/main/java/tech/followthemoney/bahamut/: App.java  Config.java
src/main/java/tech/followthemoney/bahamut/db/: CoreUtil.java  Key.java  Store.java  StoreLock.java  StoreView.java  StoreWriter.java
src/main/java/tech/followthemoney/bahamut/resolver/: Identifier.java  Linker.java
src/main/java/tech/followthemoney/bahamut/server/: BahamutManager.java  BahamutServer.java  ViewServiceImpl.java  ViewSession.java  WriterServiceImpl.java
src/main/resources/: logback.xml  model.json
src/test/java/org/opensanctions/zahir/: AppTest.java  DataFixtures.java  ModelFixtures.java  StoreFixtures.java
src/test/java/org/opensanctions/zahir/db/: CoreUtilTest.java  KeyTest.java  StoreTest.java
src/test/java/org/opensanctions/zahir/ftm/: EntityTest.java  StatementTest.java
src/test/java/tech/followthemoney/bahamut/: AppTest.java  DataFixtures.java  ModelFixtures.java  StoreFixtures.java
src/test/java/tech/followthemoney/bahamut/db/: CoreUtilTest.java  KeyTest.java  StoreTest.java
src/test/resources/fixtures/: test_dataset1.csv  test_sanctions.csv
(+5 files in other folders)
